chore: add missing comma on keyword

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "keywords": [
     "eslint",
-    "eslintconfig"
+    "eslintconfig",
     "nhnent"
   ],
   "author": "NHNEnt FE Development Lab <dl_javascript@nhnent.com>",
