--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-tui",
-  "version": "6.0.1-beta",
+  "version": "6.0.1",
   "description": "ESLint sharable config for TUI components",
   "main": "index.js",
   "scripts": {
